# gnss-sdr-monitor

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  altitude_widget.cpp  altitude_widget.h  altitude_widget.ui  channel_table_model.cpp  channel_table_model.h  cn0_delegate.cpp  cn0_delegate.h  constellation_delegate.cpp  constellation_delegate.h  dop_widget.cpp  dop_widget.h  doppler_delegate.cpp  doppler_delegate.h  gnss-sdr-monitor.pro  gnss_synchro.h  led_delegate.cpp  led_delegate.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  monitor_pvt_wrapper.cpp  monitor_pvt_wrapper.h  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  resources.qrc  telecommand_widget.cpp  telecommand_widget.h  telecommand_widget.ui  telnet_manager.cpp  telnet_manager.h
src/protobuf/: gnss_synchro.proto  monitor_pvt.proto
src/qml/: main.qml
